<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LisaaEdistyminen">

    <EditText
        android:id="@+id/PaivamaaraText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/Paivamaara_text"
        android:ems="10"
        android:hint="@string/Paivamaara_text"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/IkaText"
        android:layout_width="140dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints="@string/Ika_text"
        android:ems="10"
        android:hint="@string/Ika_text"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PaivamaaraText" />

    <EditText
        android:id="@+id/PituusText"
        android:layout_width="140dp"
        android:layout_height="41dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints="@string/Pituus_text"
        android:ems="10"
        android:hint="@string/Pituus_text"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PainoText" />

    <EditText
        android:id="@+id/PainoText"
        android:layout_width="140dp"
        android:layout_height="41dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints="@string/Paino_text"
        android:ems="10"
        android:hint="@string/Paino_text"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IkaText" />

    <TextView
        android:id="@+id/BMIText"
        android:layout_width="52dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/BMI_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PituusText" />

    <TextView
        android:id="@+id/BMINumero"
        android:layout_width="75dp"
        android:layout_height="22dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/BMI_tulos_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BMIText"
        app:layout_constraintTop_toBottomOf="@+id/PituusText" />

    <EditText
        android:id="@+id/KuvausBox"
        android:layout_width="369dp"
        android:layout_height="161dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/Lisätietoja_box_text"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/Lisätietoja_box_text"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/KuvausText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/Lisatietoja_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/KuvausBox"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>