<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/AppNimi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/headLine_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ProfileButton"
        android:layout_width="197dp"
        android:layout_height="44dp"
        android:layout_marginTop="140dp"
        android:text="@string/ProfileButton_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppNimi" />

    <Button
        android:id="@+id/FoodDiaryButton"
        android:layout_width="197dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:text="@string/FoodDiaryButton_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileButton" />

    <Button
        android:id="@+id/TrainingDiaryButton"
        android:layout_width="197dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:text="@string/TrainingDiaryButton_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FoodDiaryButton" />

    <Button
        android:id="@+id/ProgressButton"
        android:layout_width="197dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:onClick="onProgressButtonClick"
        android:text="@string/ProgressButton_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TrainingDiaryButton" />
</androidx.constraintlayout.widget.ConstraintLayout>